fix(treeview): allow horizontal scroll of node text
see https://github.com/telerik/kendo-angular/issues/1279

--- a/packages/default/scss/treeview/_layout.scss
+++ b/packages/default/scss/treeview/_layout.scss
@@ -19,7 +19,10 @@
             background: none;
             list-style: none;
             position: relative;
-            overflow: hidden;
+
+            &.ng-animating {
+                overflow: hidden;
+            }
         }
 
         // Wrappers
